updated veg model, added mongo seeds

--- a/package.json
+++ b/package.json
@@ -28,5 +28,16 @@
     "babel-preset-react": "^6.3.13",
     "json-loader": "^0.5.4",
     "webpack": "^1.13.1"
-  }
+  },
+  "description": "A gardening assistant! It will give users the ability to add vegetables to their garden planner and see when the best time will be to plant from seed. This vegetable’s planting milestones will automatically be added to their calendar where they can see when the vegetable will be in season.",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/bdunams/neo-veg.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/bdunams/neo-veg/issues"
+  },
+  "homepage": "https://github.com/bdunams/neo-veg#readme"
 }
