--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "express": "~4.15.2",
     "mongoose": "^4.11.10",
     "morgan": "~1.8.1",
+    "passport": "^0.4.0",
+    "passport-google-oauth": "^1.0.0",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "serve-favicon": "~2.4.2"
