--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
+    "express-session": "^1.15.5",
     "mongoose": "^4.11.10",
     "morgan": "~1.8.1",
     "passport": "^0.4.0",
