--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "morgan": "~1.8.1",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
-    "react": "^0.14.3",
-    "react-dom": "^0.14.3",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "serve-favicon": "~2.4.2"
   },
   "devDependencies": {
