--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "debug": "~2.6.3",
     "express": "~4.15.2",
     "express-session": "^1.15.5",
+    "fullcalendar": "^3.5.1",
     "mongoose": "^4.11.10",
     "morgan": "~1.8.1",
     "passport": "^0.4.0",
