--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "fullcalendar": "^3.5.1",
     "mongoose": "^4.11.10",
     "morgan": "~1.8.1",
+    "nodemailer": "^4.1.1",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
     "react": "^15.6.1",
