--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "public/index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
+    "start": "webpack & node app.js",
     "dev": "webpack & node ./bin/www",
     "build": "webpack"
   },
